Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.7(EOL), 10.8(EOL)
Description
http://buildbot.askmonty.org/buildbot/builders/winx64-packages/builds/26370/steps/test/logs/stdio , shows that the file t.ibd is not copied by copy-back, thus it is not in the backup.
A theory :
An empty .ibd is not getting copied into backup, because it is not getting loaded by xb_load_single_table_tablespace . There is a test small_ibd.test, that actually checks that.
Perhaps that does not work well anymore, and the file should be loaded and or copied or something like that.
Attachments
Issue Links
- blocks
-
MDEV-26154 mariabackup.xb_compressed_encrypted fails in buildbot with error 194 "Tablespace is missing for a table"
-
- Open
-
- causes
-
MDEV-29137 mariabackup excessive logging of ddl tracking
-
- Closed
-
- is caused by
-
MDEV-24626 Remove synchronous write of page0 and flushing file during file creation
-
- Closed
-
- relates to
-
MDEV-14481 Execute InnoDB crash recovery in the background
-
- Closed
-
-
MDEV-25909 Unnecessary calls to fil_ibd_load() slow down recovery
-
- Open
-
-
MDEV-27424 mariabackup ignores physically corrupt first pages
-
- Closed
-
-
MDEV-39167 BACKUP ERROR:Error: xtrabackup_apply_delta(): failed to apply /tmp/repro_crash/backup_3//cool_down/t1.ibd.delta to ./cool_down/t1.ibd.
-
- Open
-
-
MDEV-24626 Remove synchronous write of page0 and flushing file during file creation
-
- Closed
-